# marconi-redis

./: .gitignore  AUTHORS  MANIFEST.in  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py
marconi/: __init__.py
marconi/queues/storage/: __init__.py
marconi/queues/storage/redis/: __init__.py  claims.py  driver.py  messages.py  queues.py
marconi/storage/redis/: __init__.py  claims.py  controllers.py  driver.py  messages.py  options.py  queues.py  utils.py
marconi_redis/queues/storage/: __init__.py
marconi_redis/queues/storage/redis/: __init__.py  catalogue.py  claims.py  controllers.py  driver.py  messages.py  options.py  queues.py  shards.py  utils.py
tests/etc/: wsgi_redis.conf
tests/unit/queues/storage/: test_impl_redis.py
