[metadata]
name = marconi_redis
summary = Redis Back End for Openstack Marconi
Version = 0.7
description-file =
    README.rst
author = Alejandro Cabrera
author-email = alejandro.cabrera@rackspace.com
home-page = https://github.com/stackforge/marconi
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    marconi

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
marconi.queues.storage =
    redis = marconi.queues.storage.redis.driver:Driver

[nosetests]
where=tests/unit
verbosity=2

with-doctest = true

cover-package = marconi
cover-html = true
cover-erase = true
cover-inclusive = true

; Disabled: Causes a bug in testtools to manifest.
; Trigger: self.assertX(condition), where condition == False.
;
; In "testtools/testresult/real.py" the traceback is set to
; None in _details_to_exc_info(), but the inspect_traceback()
; method in nose/inspector.py requires a traceback-like object.
;
; detailed-errors = 1
